# fa-iced

./: Cargo.toml  README.md
src/: lib.rs
tests/: test_icon_render.rs  test_with_ttf_parser.rs
