[package]
name = "fa-iced"
version = "0.2.0"
edition = "2024"
license = "MIT"
authors = ["Nathan Laan"]
homepage = "https://github.com/NathanLaan/fa-iced"
repository = "https://github.com/NathanLaan/fa-iced"
description = "A Font Awesome library written in Rust for the iced UI framework."

[dependencies]
iced = {version = "0.13.1", features = ["advanced"] }
